--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react-swc": "^3.5.0",
+    "classnames": "^2.5.1",
     "commitizen": "^4.3.0",
     "cz-git": "^1.9.4",
     "eslint": "^9.9.0",
